@@ -136,99 +136,7 @@ goal is to rewrite everything to use the new framework.
 
 <p>(The documentation still largely refers to how things worked in the old framework.)
 
-<p>The new framework emulates <a href="components.html"><i>components</i></a>.
-A component can have sub-components
-(children) and a parent, so the components make up a configuration tree:
-
-<p><center><img src="model.png"></center>
-
-<p>Each component has a <i>path</i>, e.g. <tt>root.machine1.mainbus0.cpu0</tt> for the
-CPU in the right-most machine in the example above. Often, shorter paths can
-be used, such as <tt>machine1</tt> instead of <tt>root.machine1</tt>, if there
-is no ambiguity.
-
-<p>Each component has a <i>state</i>, which is a collection of <i>variables</i>.
-For e.g. a CPU component, the state is usually a set of registers. Each component
-also has a set of <i>methods</i> which can be executed. A CPU may disassemble
-instructions using its <i>unassemble</i> method:
-
-<p><table border=0 width=100%><tr><td width=5%>&nbsp;</td><td><pre>
-GXemul> <b>root</b>
-  root
-  \-- machine0  [testmips]
-      \-- mainbus0
-          |-- ram0  (32 MB at offset 0)
-          |-- rom0  (16 MB at offset 0x1fc00000)
-          \-- cpu0  (5KE, 100 MHz)
-
-  accuracy = cycle
-  step     = 0
-GXemul> <b>cpu0.unassemble</b>
-&lt;f&gt;
-0xffffffff800100f8 &lt;- 27bdffd0   addiu   sp,sp,-48    
-0xffffffff800100fc    3c03cccc   lui     v1,0xcccc    
-0xffffffff80010100    3c028888   lui     v0,0x8888    
-0xffffffff80010104    8f8b8008   lw      t3,-32760(gp)
-0xffffffff80010108    8f8a8004   lw      t2,-32764(gp)
-0xffffffff8001010c    afb60028   sw      s6,40(sp)    
-0xffffffff80010110    afb50024   sw      s5,36(sp)    
-...
-</pre></td></tr></table>
-
-<p>When single-stepping, all state change is displayed. (In the old framework,
-it was up to individual device/component implementations to print debug
-messages.)
-
-<p><table border=0 width=100%><tr><td width=5%>&nbsp;</td><td><pre>
-GXemul&gt; <b>step</b>
-step 0: cpu0: &lt;f&gt;
-              0xffffffff800100f8    27bdffd0   addiu   sp,sp,-48
-        =&gt; cpu0.pc: 0xffffffff800100f8 -&gt; 0xffffffff800100fc
-        =&gt; cpu0.sp: 0xffffffffa0007f00 -&gt; 0xffffffffa0007ed0
-GXemul&gt; 
-step 1: cpu0: 0xffffffff800100fc    3c03cccc   lui   v1,0xcccc
-        =&gt; cpu0.pc: 0xffffffff800100fc -&gt; 0xffffffff80010100
-        =&gt; cpu0.v1: 0 -&gt; 0xffffffffcccc0000
-GXemul&gt; 
-</pre></td></tr></table>
-
-<p>The example above may not be that interesting, but imagine that the CPU
-reads from a device which has a zero-on-read status register. Then the
-output may look something like this: (this is a made-up example, for now)
-
-<p><table border=0 width=100%><tr><td width=5%>&nbsp;</td><td><pre>
-GXemul&gt; <b>step</b>
-step 2: cpu0: 0xffffffff800101f4    12345678   lw   t3,256(a1)
-        =&gt; cpu0.pc: 0xffffffff800101f4 -&gt; 0xffffffff800101f8
-        =&gt; cpu0.t3: 0 -&gt; 0x2200
-        =&gt; intcontroller.status: 0x2200 -&gt; 0
-GXemul&gt; 
-</pre></td></tr></table>
-
-<p>Components that have a <i>frequency</i> are executed in steps. Those that
-do not have a frequency only do things if triggered by some other means (i.e.
-another component). The components' relative frequencies determine how many
-steps they will run at a time. For example, if we have component A running at
-100 MHz, and component B running at 1 MHz, then in 100 steps A will be executing
-100 cycles and B only 1. The GXemul framework makes sure that the exact sequence
-of cycles is the same nomatter if the user is single-stepping, or running
-the simulation continuously.
-
-<p>The frequency mentioned above does not have anything at all to do with how
-fast a particular host executes the simulation. The frequencies are only relative
-to each other.
-
-<p>Is the new framework <i>cycle-accurate</i>? Both yes and no. The framework
-itself aims to be step/cycle accurate, but it is of course up to the
-implementation of individual components to also be cycle accurate. For example,
-the CPU components that are available out-of-the-box in GXemul do not
-try to simulate out-of-order execution, or pipe-line stalls, or other
-effects that happen in a real processor, so even though the aim is that the
-implementation should be cycle accurate, it does not simulate
-any <i>existing real-world</i> processor in a cycle-accurate manner.
-
-<p>(Is it theoretically <i>possible</i> to implement pipe-lined and/or
-out-of-order CPU models for GXemul's new framework? Maybe. But that has not been done.)
+<p>The new framework is described <a href="framework.html">here</a>.
 
 
 
